Bug 50285 - Loading .doc document introduces bogus superscript text
Summary: Loading .doc document introduces bogus superscript text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.7.0 target:3.6.4 target:3.5.8
Keywords:
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-05-23 11:02 UTC by Johnny Gill
Modified: 2012-11-18 15:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File which demonstrates the bug. (21.31 KB, application/vnd.oasis.opendocument.text)
2012-05-23 11:02 UTC, Johnny Gill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johnny Gill 2012-05-23 11:02:39 UTC
Created attachment 62028 [details]
File which demonstrates the bug.

1. Save the attached (superscript.odt) file as .doc (97/2000/XP/2003) -- other MS formats have the same issue I believe.

2. Close the .doc file

3. Re-open the .doc file

Observe that text leading up to the endnote marker has been converted to superscript.

Further, try removing the superscript attribute from the text that has been converted to superscript eg highlight and hit Ctrl-Shift-P.  Save the file, close and re-open and the superscript text is back.
Comment 1 Joel Madero 2012-09-07 21:42:51 UTC
I definitely see the problem here. Confirming, changing priority and nominating as a most annoying bug. This one could really prevent a user from making high quality work. Furthermore, because the bug doesn't show until you open the file back up, you could save the file as a doc, submit it to someone and then they'll see something completely different than what you meant for them to see (or what you actually created).
Comment 2 Johnny Gill 2012-09-08 00:00:55 UTC
Many thanks.

For what it is worth my son got marks deducted at high school due to this bug.  Further, he missed the honour roll by a fraction of a percent -- without this bug he would probably have been on the honour roll.

I tried to take it up with the school, but he does not want to make a fuss.  I'm very proud of him for working with libreoffice.  

Thanks for following up the bug.
Comment 3 Joel Madero 2012-09-08 01:07:40 UTC
I say take it up with the school & point them to this bug report, I can vouch for the bug and it's our bad not your sons ;)
Comment 4 Timur 2012-09-10 11:35:46 UTC
This is not x64 nor Linux problem, so I removed it. 
This works fine in LO 345, so probably a regression from 3.5.x.
Comment 5 Caolán McNamara 2012-10-26 09:59:43 UTC
This appears to be a bug on *import* of the exported .doc. I mean that the .doc appears correct in MSWord
Comment 6 Not Assigned 2012-10-26 11:16:13 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=08ffb7bc5ec4472126762f4cb9677349b61122f6

Resolves: fdo#50285 merging props unsafe with intermediate charstyle prop



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2012-10-26 11:22:30 UTC
And it was me that broke it in the first place with http://cgit.freedesktop.org/libreoffice/core/commit/?id=b3cee382f449aa69213dc21f7b1ba6a5356d2865 I suck :-(
Comment 8 Joel Madero 2012-10-26 15:09:12 UTC
I'm just impressed at how fast it was found and solved ;)
Comment 9 Not Assigned 2012-10-26 16:22:23 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72c09b4e67bad0ecfc99ae6f77c1795f2deb4cda&g=libreoffice-3-6

Resolves: fdo#50285 merging props unsafe with intermediate charstyle prop


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Not Assigned 2012-10-26 17:47:44 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3820602b6f8d22ad4177cbd4e51b4153087986d&g=libreoffice-3-5

Resolves: fdo#50285 merging props unsafe with intermediate charstyle prop


It will be available in LibreOffice 3.5.8.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 luksiw 2012-11-18 15:23:00 UTC
Fixed in Version 4.0.0.0.alpha0+ (Build ID: 04f2f0)