Resolves: fdo#50285 merging props unsafe with intermediate charstyle prop

Its a nice idea to merge properties of the same type and value if one starts
and the same place the last one ended. But character styles are properties as
well, so if we have character-style+superscript on range a, and
character-style+superscript on range b and merge these so that we end up as...

character-style on range a, superscript on range a+b, and character-style on
range b then that clearly gives the wrong result if applied in that order.

So its only safe to merge if there are no intermediate properties that can
affect the merge candidates.

A regression from b3cee382f449aa69213dc21f7b1ba6a5356d2865

Change-Id: I541563d11265426736b840de068922eef8d45573
(cherry picked from commit 08ffb7bc5ec4472126762f4cb9677349b61122f6)

Signed-off-by: Michael Stahl <mstahl@redhat.com>